--- a/src/styles/_nav-main.scss
+++ b/src/styles/_nav-main.scss
@@ -4,7 +4,6 @@ body {
 }
 
 .logo {
-
     display: flex;
     align-items: center;
     height: 135px;
@@ -13,8 +12,6 @@ body {
     padding: 0;
     order: 9999;
     text-align: center;
-    
-    
 }
 
 .logo-button a{
@@ -26,34 +23,37 @@ body {
 .navbar-logo {
     margin: 0;
     width: 300px;
-    
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-image: var(--logoImage);
-    
     height: 135px;
     order: 1000;
-
+}
 
 .NavbarItems {
-
     position: absolute;
     top: 0px;
     left: 0px;
     z-index: 10000;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 120px;
+    height: 110px;
     width: 100vw;
-    transition: .5s ease-in-out;
+    transition: .1s ease-in-out;
     &:hover {
         background-color: var(--hoverBackground);
         border-radius: 0px 0px 10px 0px;
     }
-    // background-color: $backgroundsecondary;
+}
+
+@media (min-width: 765px){
+  .NavbarItems {
+    flex-direction: row-reverse;
+    padding-left: 25px;
+  }
 }
 
 .nav-menu {
@@ -65,6 +65,7 @@ body {
   list-style: none;
   text-align: center;
   width: 70vw;
+  height: auto;
   justify-content: end;
   align-items: center;
 }
@@ -87,13 +88,10 @@ body {
 }
 
 .nav-links {
-
   text-transform: uppercase;
   font-size: 1.75rem;
-
   font-weight: 200;
   color: var(--navtext);
-
   padding: 5px 15px;
   text-decoration: none;
   transition: 0.5s ease-in-out;
@@ -110,7 +108,7 @@ body {
     // color: $accentcolor;
     // padding: 5px 10px;
   }
-
+}
 
 .nav-links-mobile {
   display: none;
@@ -127,33 +125,35 @@ body {
     }
     .nav-menu {
         display: flex;
+        justify-content: space-evenly;
         padding: 0;
         flex-direction: column;
         width: 100%;
-        height: 50vh;
+        height: 100vh;
         position: absolute;
-        top: 100px;
+        top: 110px;
         left: -100%;
-        opacity: .95;
-        transition: 1s ease-in;
+        opacity: 1;
+        transition: .2s ease-in;
         z-index: 1000;
     }
     .nav-menu.active {
-        width: 100vw;
-        height: 40vh;
+      
+        width: 100%;
+        top: 110px;
+        height: 100vh;
         background: #0b0b0b;
         left: 0;
-        opacity: .98;
-        transition: 0.5s ease-in;
+        opacity: 1;
+        transition: .2s ease-in;
         z-index: 1000;
     }
-
 
   .nav-links {
     font-size: 1.5rem;
     text-align: center;
     padding: 1rem 125px;
-    margin-top: 50px;
+    margin-top: 0px;
     width: 100%;
     display: table;
     transition: 0.3s ease-in-out;
@@ -175,12 +175,11 @@ body {
   .menu-icon {
     display: block;
     position: absolute;
-    top: 25px;
+    top: 20px;
     right: 0;
     transform: translate(-100%, 70%);
     font-size: 1.8rem;
     cursor: pointer;
   }
 }
-}
-}
+
