--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -4,9 +4,9 @@
     --primarytxtcolor: #f5f5f5;
     --sortTitles: #f5f5f5;
     --accentcolor: #E03D15;
-    --lightblue: #B5D2E3;
+    --lightblue: rgb(181, 210, 227);
     --navtext: #f5f5f5;
-    --hoverBackground: rgba(41, 50, 65, 0.655);
+    --hoverBackground: rgba(41, 50, 65);
     --logoImage: url("../images/logo_light_blue_text.png");
 }
 
@@ -18,6 +18,6 @@
     --sortTitles: #293241;
     --lightblue: #B5D2E3;
     --navtext: #f5f5f5;
-    --hoverBackground: rgba(61, 90, 128, 0.655);
+    --hoverBackground: rgba(181, 210, 227);
     --logoImage: url("../images/logo_dark_blue_text.png");
 }
