--- a/src/styles/_hero-img.scss
+++ b/src/styles/_hero-img.scss
@@ -70,10 +70,11 @@
                 @include mq($desktopWideBP){
                     font-size: 26px;
                     padding: 0.4rem 1.5rem;
+                    transition: 0.5s ease-in;
 
                     &:hover {
-                        transform: scale(1.2);
-                        transition: 0.5s;
+                        transform: scale(1.08, 1.08);
+                        box-shadow: 0 0 5px #fff;
                     }
                 }
 
