--- a/src/styles/_nav-main.scss
+++ b/src/styles/_nav-main.scss
@@ -118,6 +118,12 @@ body {
   display: none;
 }
 
+@media (max-width: 900px ) {
+  .nav-links {
+    font-size: 1rem; 
+  }
+}
+
 
 @media (max-width: $tabletBP ) {
     .NavbarItems {
