--- a/src/styles/_searchMovies.scss
+++ b/src/styles/_searchMovies.scss
@@ -1,7 +1,7 @@
 .background-styles {
     margin: 0 auto;
     position: absolute;
-    top: 50px;
+    top: 100px;
     background-image: url(../images/background-movies.png);
     background-repeat: no-repeat;
     background-size:cover;
@@ -16,7 +16,7 @@
 .container {
     margin:  auto;
     max-width: 100vw;
-    height: 100vh;
+    height: 100%;
     padding: 0px 0px;
     z-index: 3;
     filter: revert;
