--- a/src/styles/_nav-main.scss
+++ b/src/styles/_nav-main.scss
@@ -45,7 +45,7 @@ body {
     transition: .1s ease-in-out;
     &:hover {
         background-color: var(--hoverBackground);
-        border-radius: 0px 0px 10px 0px;
+        // border-radius: 0px 0px 10px 0px;
     }
 }
 
