--- a/src/styles/_searchMovies.scss
+++ b/src/styles/_searchMovies.scss
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     background-size:cover;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     z-index: -1;
     opacity: .3;
     filter: blur(3px);
