--- a/src/styles/_hero-img.scss
+++ b/src/styles/_hero-img.scss
@@ -12,44 +12,53 @@
         .sliderText {
             z-index: 1000;
             position: absolute;
-            bottom: 13%;
+            bottom: 18%;
             left: 0;
             right: 0;
             text-align: center;
 
             @include mq($tabletBP){
-                bottom: 15%;
+                bottom: 18%;
             }
 
             h2 {
                 // font-family: 'Open Sans', sans-serif;
                 text-align: center;
-                font-size: 22px;
+                font-size: 1.8rem;
                 letter-spacing: 1px;
                 max-width: 80vw;
                 margin: 1.5rem auto;
+                text-transform: uppercase;
 
                 text-shadow:
-                0.05em 0 black,
-                0 0.05em black,
-                -0.05em 0 black,
-                0 -0.05em black,
-                -0.05em -0.05em black,
-                -0.05em 0.05em black,
-                0.05em -0.05em black,
-                0.05em 0.05em black;
+                0.03em 0 black,
+                0 0.03em black,
+                -0.03em 0 black,
+                0 -0.03em black,
+                -0.03em -0.03em black,
+                -0.03em 0.03em black,
+                0.03em -0.03em black,
+                0.03em 0.03em black;
 
                 @include mq($tabletBP){
-                    font-size: 26px;
+                    font-size: 2rem;
                     margin: 2rem auto;
                 }
 
                 @include mq($desktopBP){
-                    font-size: 34px;
+                    font-size: 2.25rem;
                 }
 
                 @include mq($desktopWideBP){
-                    font-size: 38px;
+                    font-size: 2.5rem;
+                }
+
+                @include mq(1500px){
+                    font-size: 2.75rem;
+                }
+
+                @include mq(1920px){
+                    font-size: 3.4rem;
                 }
             }
 
