--- a/src/styles/_searchMovies.scss
+++ b/src/styles/_searchMovies.scss
@@ -16,7 +16,7 @@
 .container {
     margin:  auto;
     max-width: 100vw;
-    height: 100%;
+    min-height: 95vh;
     padding: 0px 0px;
     z-index: 3;
     filter: revert;
